--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<meta charset="UTF-8">
 	<title>Webpack template</title>
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+	<meta content="width=device-width, minimum-scale=1, maximum-scale=1", name="viewport" />
+	<meta name="author", content="Babich Ruslan" />
 </head>
 <body>
 
